--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script>global = globalThis</script>
 </head>
 <body>
   <app-root></app-root>
